<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background2"
    tools:context=".LoginActivity">




    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="131dp"
        android:layout_height="142dp"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="100dp"
        />
    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:padding="10dp"
        android:background="@color/colortLightPink"
        android:layout_marginTop="40dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        android:hint="@string/user_name"
        android:padding="10dp"
        android:background="@color/colortLightPink"

        />
    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@color/colortLightPink"

        />
    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_your_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@color/colortLightPink"
        />

    <CheckBox
        android:id="@+id/checkedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:checked="false"
        android:text="@string/i_agree_to_the_terms_and_conditions"
        />



    <Button
        android:id="@+id/button2"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_button"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorDarkBlue"

        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/already_have_an_account_log_in"
        android:textColor="@color/colorDarkBlue"
        />






</LinearLayout>